--- a/.github/workflows/GetMyNameAsGraph.yml
+++ b/.github/workflows/GetMyNameAsGraph.yml
@@ -1,4 +1,4 @@
- name: gitartwork from a contribution graph
+ name: ArtWork Yassine baghdadi
  on: 
    push:
    schedule:
@@ -14,5 +14,5 @@
             # Use this username's contribution graph  
             user_name: YassineBaghdadi
             # Text on contribution graph 
-            text: YassineBaghdadi
+            text: Yassine
        - uses: jasineri/simple-push-action@v1
